    idea behind the player check in CollsionDetect.java. >
}


{ (NEEDS TO BE FIXED) (PROBLEM IS A MINOR/MEDIUM INCONVIENCE)
    !!!! When you spam two directions and are colliding with a wall, the wall moves. -> When you spam two opposite directions you have a chance to be perma stuck in said entity.
}

{   (5/29 CHANGED TO DELTA CHECK TIMER WHATEVER)
    !! Might be bugs be careful.
}


Things to add:

        IMPORTANT
            -People vs people collision
                Spawn hitboxes, so it doesn't just spawn on top of each other and get stuck.

            *Teleport if collides with wall? Or just stops and the entites build up?
                As of the notes of 5/25, the current build(?) has people vs wall and player vs wall collisions.

            *Fix/Revamp the collision checks in Game.java
                Done as of 5/25.

            -Timer/Scoring system
                < In this order, because if the projectiles and the more fun aspect of the game CANT be completed in like 2 weeks, then it can just be a
                "How long can you survive dodging people" >

            -Projectiles
            -HP,XP,Abilities
                -For Abilities, do we want them to be active or passive <- BOTH (5/28)
                    -Meaning does the player dictate when they use them, and what keys or how will they be activated?
            -Collision aginst projectiles
            -Animimations????? <- BY ANIMATIONS I MEAN NOT AN INSTANT ONE -> TWO FRAME THING. also sort of done FOR swords(5/28)

            -Fix the calculations for center of screen, when constucting the player's location. (5/29)

            -Entity AI, where they move towards the player.

        
        WISHES
            -Settings for screen resolutions, maybe opacity, maybe changing the assets, maybe change keybinds?

            -Fix minor Bugs (HAHA NEVER)
            
            -A nice looking title and end screen

            -A personal best local database?
