@@ -10,6 +10,7 @@ public class PlayerData extends Entity{
     private Game game;
     public KeyHandler key;
     // public BufferedImage sprite; // this one for the "character frames" ig
+    public String imageFilePathUp, imageFilePathDown, imageFilePathLeft, imageFilePathRight;
 
     public PlayerData(KeyHandler k, Game g){
         super();
@@ -29,10 +30,15 @@ public class PlayerData extends Entity{
 
     public PlayerData(KeyHandler k, Game g, int startingX, int startingY, int playerS, int sizeX, int sizeY){
         super(startingX, startingY, playerS, sizeX, sizeY);
+        imageFilePathUp = "/Player_Images/JermaUp.png";
+        imageFilePathDown = "/Player_Images/JermaDown.png";
+        imageFilePathLeft = "/Player_Images/JermaLeft.png";
+        imageFilePathRight = "/Player_Images/JermaRight.png";
         this.health = 100;
+        this.eSpeed = 20;
         game = g;
         key = k;
-        this.setSprite("/Player_Images/JermaUp.png");
+        this.setSprite(imageFilePathUp);
         this.type = "player";
     }
 
@@ -69,16 +75,16 @@ public class PlayerData extends Entity{
             // System.out.println(direction);
             switch(direction){
                 case 87: // W
-                    sprite = ImageIO.read(getClass().getResourceAsStream("/Player_Images/JermaUp.png"));
+                    sprite = ImageIO.read(getClass().getResourceAsStream(imageFilePathUp));
                     break;
                 case 83: //S
-                    sprite = ImageIO.read(getClass().getResourceAsStream("/Player_Images/JermaDown.png"));
+                    sprite = ImageIO.read(getClass().getResourceAsStream(imageFilePathDown));
                     break;
                  case 65: // A
-                    sprite = ImageIO.read(getClass().getResourceAsStream("/Player_Images/JermaLeft.png"));
+                    sprite = ImageIO.read(getClass().getResourceAsStream(imageFilePathLeft));
                     break;
                 case 68: //D
-                    sprite = ImageIO.read(getClass().getResourceAsStream("/Player_Images/JermaRight.png"));
+                    sprite = ImageIO.read(getClass().getResourceAsStream(imageFilePathRight));
                     break;
             }
 
